@@ -579,26 +579,45 @@ int ObjectGadgetRampInterVertex(ObjectGadgetRamp *I,float *pos,float *color,int 
       }
       if(ok) ok = (I->Mol!=NULL);      
       if(ok) {
-        int index = ObjectMoleculeGetNearestAtomIndex(I->Mol, pos, cutoff, state, &dist);
-        if(index>=0) {
-          float *atomic =  ColorGet(I->Gadget.Obj.G,I->Mol->AtomInfo[index].color);
-          float *object =  ColorGet(I->Gadget.Obj.G,I->Mol->Obj.Color);
-          
-          if(sub_vdw) {
-            dist-=I->Mol->AtomInfo[index].vdw;
-            if(dist<0.0F)
-              dist = 0.0F;
-          }
-          
-          if(!ObjectGadgetRampInterpolateWithSpecial(I,dist,color,atomic,
-                                                     object,pos,state,false)) {
-            copy3f(I->Color,color);
+        if(SettingGet_b(I->Gadget.Obj.G,I->Gadget.Obj.Setting,NULL,cSetting_ramp_blend_nearby_colors)) {
+          float atomic[3];
+          int index = ObjectMoleculeGetNearestBlendedColor(I->Mol, pos, cutoff, state, &dist, atomic);
+          if(index>=0) {
+            float *object =  ColorGet(I->Gadget.Obj.G,I->Mol->Obj.Color);
+            
+            if(!ObjectGadgetRampInterpolateWithSpecial(I,dist,color,atomic,
+                                                       object,pos,state,false)) {
+              copy3f(I->Color,color);
+            }
+          } else {
+            float white[3] = {1.0F, 1.0F, 1.0F};
+            if(!ObjectGadgetRampInterpolateWithSpecial(I,cutoff+1.0F,color,white,
+                                                       white,pos,state,false)) {
+              copy3f(I->Color,color);
+            }
           }
         } else {
-          float white[3] = {1.0F, 1.0F, 1.0F};
-          if(!ObjectGadgetRampInterpolateWithSpecial(I,cutoff+1.0F,color,white,
-                                                     white,pos,state,false)) {
-            copy3f(I->Color,color);
+          int index = ObjectMoleculeGetNearestAtomIndex(I->Mol, pos, cutoff, state, &dist);
+          if(index>=0) {
+            float *atomic =  ColorGet(I->Gadget.Obj.G,I->Mol->AtomInfo[index].color);
+            float *object =  ColorGet(I->Gadget.Obj.G,I->Mol->Obj.Color);
+            
+            if(sub_vdw) {
+              dist-=I->Mol->AtomInfo[index].vdw;
+              if(dist<0.0F)
+                dist = 0.0F;
+            }
+            
+            if(!ObjectGadgetRampInterpolateWithSpecial(I,dist,color,atomic,
+                                                       object,pos,state,false)) {
+              copy3f(I->Color,color);
+            }
+          } else {
+            float white[3] = {1.0F, 1.0F, 1.0F};
+            if(!ObjectGadgetRampInterpolateWithSpecial(I,cutoff+1.0F,color,white,
+                                                       white,pos,state,false)) {
+              copy3f(I->Color,color);
+            }
           }
         }
       }
